tests/fail/conflicting_inverse.stderr
error: `no_short and no_long` and `inverse_arg` are conflicting attributes
 --> $DIR/conflicting_inverse.rs:9:9
  |
9 |     pub value: bool,
  |         ^^^^^
